<resources>
    <string name="app_name">TrackerApps</string>
    <string name="title_activity_maps">Map</string>
    <string name="login">Login</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register_new_account">Register New Account</string>
    <string name="or_login_using">or Login using</string>
    <string name="already_have_account">Already have account ?</string>
    <string name="settings">Settings</string>
    <string name="map">Map</string>
    <string name="logout">Logout</string>
    <string name="name">Name..</string>
    <string name="status">Status..</string>
    <string name="statuss">Status</string>
    <string name="status_optional">Status (Optional)</string>
    <string name="verification_code">Verification Code</string>
    <string name="send_verification_code">Send Verification Code</string>
    <string name="verify">Verify</string>
    <string name="update">Update</string>
    <string name="username">Username</string>
    <string name="default_notification_channel_id">channel_id</string>
</resources>
